增加ORM模型动态加载支持